--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "rimraf dist",
     "prepublish": "npm run build",
     "build": "npm run clean && tsc && npm run bundle",
+    "bundle": "esbuild src/index.ts --sourcemap --format=esm --outfile=dist/bundle.mjs --bundle",
     "develop": "esbuild src/index.ts --sourcemap --format=esm --outfile=dist/bundle.mjs --bundle --watch"
   },
   "keywords": [],
