--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
     "esbuild": "^0.13.8",
+    "eslint": "^8.1.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.4.0"
   },
