--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "typescript": "^4.4.0"
   },
   "repository": {
-    "url": "git@github.com:clinth/geometry.git"
+    "url": "git@github.com:clinth/ix.git"
   },
   "dependencies": {
     "@types/bezier-js": "^4.1.0",
