--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clean": "rimraf dist",
     "prepublish": "npm run build",
     "build": "tsc && npm run bundle",
+    "run": "tsc && node -r source-map-support/register",
     "bundle": "esbuild src/index.ts --sourcemap --format=esm --outfile=dist/bundle.mjs --bundle",
     "develop": "esbuild src/index.ts --sourcemap --format=esm --outfile=dist/bundle.mjs --bundle --watch"
   },
@@ -30,6 +31,7 @@
     "esbuild": "^0.13.8",
     "eslint": "^8.1.0",
     "rimraf": "^3.0.2",
+    "source-map-support": "^0.5.21",
     "typescript": "^4.4.0"
   },
   "repository": {
