--- a/package.json
+++ b/package.json
@@ -25,18 +25,22 @@
     "esdevelop": "esbuild src/index.ts --sourcemap --format=esm --outfile=dist/bundle.mjs --bundle --watch",
     "bundle": "tsup",
     "develop": "tsup --watch",
-    "develop-tests": "npx snowpack --config snowpack-tests.config.js"
+    "develop-tests": "snowpack dev --config ./snowpack-tests.config.js",
+    "develop-demos": "snowpack dev --config ./snowpack-demos.config.js",
+    "build-demos": "snowpack build --config ./snowpack-demos.config.js"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@svgdotjs/svg.js": "^3.1.1",
     "@types/jest": "^27.0.3",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "esbuild": "^0.13.8",
     "eslint": "^8.1.0",
     "jest": "^27.4.5",
+    "live-server": "^1.2.1",
     "rimraf": "^3.0.2",
     "snowpack": "^3.8.8",
     "source-map-support": "^0.5.21",
@@ -49,7 +53,6 @@
   },
   "dependencies": {
     "@types/bezier-js": "^4.1.0",
-    "bezier-js": "^4.1.1",
-    "live-server": "^1.2.1"
+    "bezier-js": "^4.1.1"
   }
 }
