--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "declaration": true,
     "sourceMap": true,
     "esModuleInterop": true,
-    "removeComments": true,
+    "removeComments": false,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
   "include": [
