--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dist"
   ],
   "scripts": {
+    "coverage": "jest --collectCoverage",
     "test": "jest",
     "watch": "tsc --watch",
     "clean": "rimraf dist",
