--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,14 @@
             "off",
             "ignore-params"
         ],
+        "@typescript-eslint/no-unused-vars": [
+            "warn",
+            {
+                "argsIgnorePattern": "^_",
+                "varsIgnorePattern": "^_",
+                "caughtErrorsIgnorePattern": "^_"
+            }
+        ],
         "@typescript-eslint/ban-ts-comment": [
             "off"
         ],
