--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/jest": "^27.4.0",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
+    "color2k": "^1.2.5",
     "esbuild": "^0.14.11",
     "eslint": "^8.6.0",
     "jest": "^27.4.7",
