--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "test:coverage": "jest --collectCoverage",
-    "test": "jest",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "watch": "tsc --watch",
     "clean": "rimraf dist",
     "prepublish": "npm run build",
@@ -39,10 +39,14 @@
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
     "color2k": "^1.2.5",
+    "cross-env": "^7.0.3",
     "esbuild": "^0.14.11",
     "eslint": "^8.6.0",
+    "fp-ts": "^2.11.7",
     "jest": "^27.4.7",
+    "jest-extended": "^1.2.0",
     "live-server": "^1.2.1",
+    "npm-check-updates": "^12.1.0",
     "rimraf": "^3.0.2",
     "snowpack": "^3.8.8",
     "source-map-support": "^0.5.21",
