--- a/www/package.json
+++ b/www/package.json
@@ -2,6 +2,7 @@
   "name": "@example/docs",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "astro dev",
     "devDebug": "cross-env DEBUG=vite:* astro dev",
@@ -13,9 +14,12 @@
     "@docsearch/react": "^1.0.0-alpha.28"
   },
   "devDependencies": {
+    "@astrojs/renderer-lit": "^0.3.0",
     "@astrojs/renderer-preact": "^0.4.0",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "astro": "^0.22.9",
     "cross-env": "^7.0.3",
+    "lit": "^2.1.1",
     "vite-tsconfig-paths": "^3.3.17"
   }
 }
