--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
     "@svgdotjs/svg.js": "^3.1.1",
     "@types/jest": "^27.4.0",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.1",
     "color2k": "^1.2.5",
     "cross-env": "^7.0.3",
     "esbuild": "^0.14.11",
     "eslint": "^8.6.0",
+    "eslint-plugin-functional": "^4.1.1",
     "fp-ts": "^2.11.7",
     "jest": "^27.4.7",
     "jest-extended": "^1.2.0",
@@ -52,6 +53,7 @@
     "source-map-support": "^0.5.21",
     "ts-jest": "^27.1.2",
     "tsup": "^5.11.11",
+    "tsutils": "^3.21.0",
     "typescript": "^4.6.0-dev.20220109"
   },
   "repository": {
