--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
   "include": [
-    "./src"
+    "./src",
+    "./demos"
   ]
 }
