--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   "dependencies": {
     "@types/bezier-js": "^4.1.0",
     "bezier-js": "^4.1.1",
-    "lit": "^2.1.1"
+    "lit": "^2.1.1",
+    "rxjs": "^7.5.2"
   }
 }
