--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "declaration": true,
     "sourceMap": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "removeComments": false,
