--- a/www/package.json
+++ b/www/package.json
@@ -11,7 +11,9 @@
     "preview": "astro preview"
   },
   "dependencies": {
-    "@docsearch/react": "^1.0.0-alpha.28"
+    "@docsearch/react": "^1.0.0-alpha.28",
+    "rxjs": "^7.5.2",
+    "typescript": "^4.6.0-dev.20220128"
   },
   "devDependencies": {
     "@astrojs/renderer-lit": "^0.3.0",
