--- a/www/package.json
+++ b/www/package.json
@@ -12,16 +12,17 @@
   },
   "dependencies": {
     "@docsearch/react": "^1.0.0-alpha.28",
+    "json5": "^2.2.0",
     "rxjs": "^7.5.2",
-    "typescript": "^4.6.0-dev.20220128"
+    "typescript": "^4.6.0-dev.2022013"
   },
   "devDependencies": {
-    "@astrojs/renderer-lit": "^0.3.0",
+    "@astrojs/renderer-lit": "^0.3.1",
     "@astrojs/renderer-preact": "^0.4.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
-    "astro": "^0.22.9",
+    "astro": "^0.22.20",
     "cross-env": "^7.0.3",
-    "lit": "^2.1.1",
+    "lit": "^2.1.2",
     "vite-tsconfig-paths": "^3.3.17"
   }
 }
