--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -136,7 +136,13 @@
                 ]
             },
             {
-                "selector": "variable",
+                "selector": [
+                    "variable"
+                ],
+                "modifiers": [
+                    "const",
+                    "exported"
+                ],
                 "types": [
                     "boolean"
                 ],
