--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "pkg": "npm run bundle",
     "pkg:typings": "tsc --project config/tsconfig.pkg.json",
     "copyForDemos": "copyfiles ./dist/* ../ixfx-demos/node_modules/ixfx/",
-    "docs": "grok ./etc/build/index.d.ts --config ./config/grok.config.cjs --outDir ./docs/api",
+    "docs": "typedoc --options ./config/typedoc.json",
     "lint": "eslint src/**",
     "test:coverage": "jest --collectCoverage --config config/jest.config.js",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config config/jest.config.js"
   },
   "legacyScripts": {
+    "docs:grok": "grok ./etc/buildForApiDocs/ --config ./config/grok.config.cjs --outDir ./docs/api",
     "legacyesbundle": "esbuild src/index.ts --sourcemap --format=esm --outfile=dist/ixfx.js --bundle",
     "legacyesdevelop": "esbuild src/index.ts --sourcemap --format=esm --outfile=dist/index.js --bundle --watch",
     "legacydev:demos": "snowpack dev --config ./config/snowpack-demos.config.js",
@@ -44,34 +45,32 @@
     "legacybuild:demos": "snowpack build --config ./config/snowpack-demos.config.js"
   },
   "devDependencies": {
-    "@svgdotjs/svg.js": "^3.1.1",
+    "@svgdotjs/svg.js": "^3.1.2",
     "@types/jest": "^27.4.0",
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.1",
-    "@ui-js/grok": "^1.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
     "color2k": "^1.2.5",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
-    "esbuild": "^0.14.11",
-    "eslint": "^8.6.0",
+    "esbuild": "^0.14.17",
+    "eslint": "^8.8.0",
     "eslint-plugin-functional": "^4.1.1",
-    "fp-ts": "^2.11.7",
+    "fp-ts": "^2.11.8",
     "jest": "^27.4.7",
-    "jest-extended": "^1.2.0",
+    "jest-extended": "^2.0.0",
     "live-server": "^1.2.1",
-    "npm-check-updates": "^12.1.0",
+    "npm-check-updates": "^12.2.1",
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.21",
-    "ts-jest": "^27.1.2",
-    "tsup": "^5.11.11",
+    "ts-jest": "^27.1.3",
+    "tsup": "^5.11.13",
     "tsutils": "^3.21.0",
     "typedoc": "^0.22.11",
-    "typedoc-plugin-markdown": "^3.11.12",
     "typescript": "^4.6.0-dev.20220109"
   },
   "dependencies": {
     "@types/bezier-js": "^4.1.0",
-    "bezier-js": "^4.1.1",
+    "bezier-js": "^5.1.0",
     "lit": "^2.1.2",
     "rxjs": "^7.5.2"
   },
