--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "pkg": "npm run bundle",
     "pkg:typings": "tsc --project config/tsconfig.pkg.json",
     "copyForDemos": "copyfiles ./dist/* ../ixfx-demos/node_modules/ixfx/",
-    "copyApiDocs": "copyfiles --up 1 ./etc/api/**/*.* ../ixfx-docs/docs/",
-    "docs": "typedoc --options ./config/typedoc.json",
+    "docs": "typedoc --customCss ./config/custom.css --options ./config/typedoc.json && npm run copyIcons",
+    "docs:watch": "typedoc --customCss ./config/custom.css --watch --options ./config/typedoc.json",
+    "copyApiDocs": "copyfiles --up 1 ./docs/**/*.* ../ixfx-docs/docs/api",
+    "copyIcons": "copyfiles --up 1 ./config/*.png ./docs/assets/",
     "lint": "eslint src/**",
     "test:coverage": "jest --collectCoverage --config config/jest.config.js",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config config/jest.config.js"
