--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ixfx",
-  "version": "0.0.2",
+  "name": "@clinth/ixfx",
+  "version": "0.0.4",
   "description": "A framework for programming interactivity",
   "homepage": "https://github.com/clinth/ixfx/",
   "keywords": [
@@ -28,15 +28,15 @@
     "develop": "tsc --watch",
     "clean": "rimraf dist && rimraf etc",
     "run": "tsc && node -r source-map-support/register",
-    "bundle": "tsup",
-    "bundle:watch": "tsup --watch",
-    "prepublish": "npm run clean && npm run pkg",
-    "pkg": "npm run bundle",
-    "pkg:typings": "tsc --project config/tsconfig.pkg.json",
+    "bundle": "tsup --sourcemap && npm run typings",
+    "prepublish": "npm run clean && tsup && npm run typings",
+    "typings": "tsc --project config/tsconfig.pkg.json",
     "copyForDemos": "copyfiles --up 1 ./dist/* ../ixfx-demos/ixfx/",
     "docs": "typedoc --customCss ./config/custom.css --options ./config/typedoc.json && npm run copyIcons",
     "docs:watch": "typedoc --customCss ./config/custom.css --watch --options ./config/typedoc.json",
     "copyIcons": "copyfiles --up 1 ./config/*.png ./docs/assets/",
+    "publishNpm": "npm config set @clinth/registry=https://registry.npmjs.org && npm set name=ixfx && npm publish",
+    "publishGh": "npm config set registry=https://npm.pkg.github.com && npm set name=@clinth/ixfx && npm publish",
     "lint": "eslint src/**",
     "test:coverage": "jest --collectCoverage --config config/jest.config.js",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config config/jest.config.js"
