--- a/package.json
+++ b/package.json
@@ -53,11 +53,14 @@
   },
   "devDependencies": {
     "@svgdotjs/svg.js": "^3.1.2",
+    "@types/d3-color": "^3.0.2",
+    "@types/d3-interpolate": "^3.0.1",
     "@types/jest": "^27.4.0",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
+    "d3-interpolate": "^3.0.1",
     "esbuild": "^0.14.17",
     "eslint": "^8.8.0",
     "eslint-plugin-functional": "^4.1.1",
@@ -77,6 +80,7 @@
   "dependencies": {
     "@types/bezier-js": "^4.1.0",
     "bezier-js": "^5.1.0",
+    "d3-color": "^3.0.1",
     "lit": "^2.1.2",
     "rxjs": "^7.5.2"
   },
