Try-catch around Safari regex, added async callback support for timeout & continuous

--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "bundle": "tsup --sourcemap && npm run typings",
     "prepublish": "npm run clean && tsup && npm run typings",
     "typings": "tsc --project config/tsconfig.pkg.json",
+    "typings:watch": "tsc --watch --project config/tsconfig.pkg.json",
     "demos": "npm run bundle && npm run copyForDemos",
+    "demos:watch": "concurrently \"npm run dev\"  \"npm run typings:watch\"",
     "copyForDemos": "copyfiles --up 1 ./dist/* ../ixfx-demos/ixfx/",
     "docs": "typedoc --customCss ./config/custom.css --options ./config/typedoc.json && npm run copyIcons",
     "docs:watch": "typedoc --customCss ./config/custom.css --watch --options ./config/typedoc.json",
@@ -50,6 +52,7 @@
     "@types/jest": "^27.4.0",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
+    "concurrently": "^7.0.0",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "d3-interpolate": "^3.0.1",
