--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/d3-color": "^3.0.2",
     "@types/d3-interpolate": "^3.0.1",
     "@types/jest": "^27.4.0",
+    "@types/w3c-web-serial": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "concurrently": "^7.0.0",
