--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@clinth/ixfx",
+  "name": "ixfx",
   "version": "0.0.7",
   "description": "A framework for programming interactivity",
   "homepage": "https://github.com/clinth/ixfx/",
