--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ixfx",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "A framework for programming interactivity",
   "homepage": "https://github.com/clinth/ixfx/",
   "keywords": [
@@ -24,23 +24,23 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc",
+    "typecheck": "tsc",
     "develop_": "tsc --watch",
     "dev": "tsup --watch",
     "clean": "rimraf dist && rimraf etc",
     "run": "tsc && node -r source-map-support/register",
-    "bundle": "tsup --sourcemap && npm run typings",
-    "prepublish": "npm run clean && npm run bundle",
+    "build": "tsup --sourcemap && npm run typings",
+    "prepublish": "npm run clean && npm run build",
     "typings": "tsc --project config/tsconfig.pkg.json",
     "typings:watch": "tsc --watch --project config/tsconfig.pkg.json",
-    "demos": "npm run bundle && npm run copyForDemos",
+    "demos": "npm run build && npm run demos:copy",
     "demos:watch": "concurrently \"npm run dev\"  \"npm run typings:watch\"",
-    "copyForDemos": "copyfiles --up 1 ./dist/* ../ixfx-demos/ixfx/",
-    "docs": "typedoc --customCss ./config/custom.css --options ./config/typedoc.json && npm run copyIcons",
+    "demos:copy": "copyfiles --up 1 ./dist/* ../ixfx-demos/ixfx/",
+    "docs": "typedoc --customCss ./config/custom.css --options ./config/typedoc.json && npm run docs:copyIcons",
     "docs:watch": "typedoc --customCss ./config/custom.css --watch --options ./config/typedoc.json",
-    "copyIcons": "copyfiles --up 1 ./config/*.png ./docs/assets/",
-    "publishNpm": "npm config set registry https://registry.npmjs.org && npm set name ixfx && npm publish",
-    "publishGh": "npm config set registry https://npm.pkg.github.com && npm set name @clinth/ixfx && npm publish",
+    "docs:copyIcons": "copyfiles --up 1 ./config/*.png ./docs/assets/",
+    "publish:npm": "npm config set registry https://registry.npmjs.org && npm set name ixfx && npm publish",
+    "publish:gh": "npm config set registry https://npm.pkg.github.com && npm set name @clinth/ixfx && npm publish",
     "lint": "eslint src/**",
     "test:coverage": "jest --collectCoverage --config config/jest.config.js",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config config/jest.config.js"
