--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ixfx",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "A framework for programming interactivity",
   "homepage": "https://github.com/clinth/ixfx/",
   "keywords": [
@@ -51,14 +51,14 @@
     "@types/d3-interpolate": "^3.0.1",
     "@types/jest": "^27.4.0",
     "@types/w3c-web-serial": "^1.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "@typescript-eslint/parser": "^5.10.2",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
     "concurrently": "^7.0.0",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "d3-interpolate": "^3.0.1",
-    "esbuild": "^0.14.17",
-    "eslint": "^8.8.0",
+    "esbuild": "^0.14.25",
+    "eslint": "^8.11.0",
     "eslint-plugin-functional": "^4.1.1",
     "fp-ts": "^2.11.8",
     "jest": "^27.4.7",
@@ -68,17 +68,17 @@
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.21",
     "ts-jest": "^27.1.3",
-    "tsup": "^5.11.13",
+    "tsup": "^5.12.1",
     "tsutils": "^3.21.0",
-    "typedoc": "^0.22.11",
-    "typescript": "^4.6.0-dev.20220109"
+    "typedoc": "^0.22.13",
+    "typescript": "^4.6.2"
   },
   "dependencies": {
     "@types/bezier-js": "^4.1.0",
     "bezier-js": "^5.1.0",
     "d3-color": "^3.0.1",
-    "lit": "^2.1.2",
-    "rxjs": "^7.5.2"
+    "lit": "^2.2.0",
+    "rxjs": "^7.5.5"
   },
   "engines": {
     "node": ">=17.0.1"
