--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ixfx",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "A framework for programming interactivity",
   "homepage": "https://github.com/clinth/ixfx/",
   "keywords": [
@@ -39,8 +39,6 @@
     "docs": "typedoc --customCss ./config/custom.css --options ./config/typedoc.json && npm run docs:copyIcons",
     "docs:watch": "typedoc --customCss ./config/custom.css --watch --options ./config/typedoc.json",
     "docs:copyIcons": "copyfiles --up 1 ./config/*.png ./docs/assets/",
-    "publish:npm": "npm config set registry https://registry.npmjs.org && npm set name ixfx && npm publish",
-    "publish:gh": "npm config set registry https://npm.pkg.github.com && npm set name @clinth/ixfx && npm publish",
     "lint": "eslint src/**",
     "test:coverage": "jest --collectCoverage --config config/jest.config.js",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config config/jest.config.js"
@@ -75,6 +73,7 @@
   },
   "dependencies": {
     "@types/bezier-js": "^4.1.0",
+    "@types/web-bluetooth": "^0.0.14",
     "bezier-js": "^5.1.0",
     "d3-color": "^3.0.1",
     "lit": "^2.2.0",
