--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,8 +4,8 @@
     {
       "type": "pwa-msedge",
       "request": "launch",
-      "name": "Geometry debug",
-      "url": "http://localhost:5501/demo/easings.html"
+      "name": "Scratchpad",
+      "url": "http://localhost:5501/scratch/"
     }
   ]
 }
