Added Plot2 tester

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,8 @@
         ]
     },
     "ignorePatterns": [
-        "scratch/**"
+        "scratch/**",
+        "tests/**"
     ],
     "plugins": [
         "@typescript-eslint",
