--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "demos": "rimraf dist && npm run build && npm run demos:copy",
     "demos:watch": "concurrently \"npm run dev\"  \"npm run typings:watch\"",
     "demos:copy": "copyfiles --up 1 ./dist/* ../ixfx-demos/ixfx/",
-    "docs": "typedoc --customCss ./config/custom.css --options ./config/typedoc.json && npm run docs:copyIcons",
+    "docs": "typedoc --customCss ./config/custom.css --options ./config/typedoc.json",
     "docs:watch": "typedoc --customCss ./config/custom.css --watch --options ./config/typedoc.json",
     "docs:copyIcons": "copyfiles --up 1 ./config/*.png ./docs/assets/",
     "lint": "eslint src/**",
