--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,11 @@
 {
   "liveServer.settings.port": 5501,
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "search.exclude": {
+    "**/node_modules": true,
+    "**/etc": true,
+    "**/dist": true,
+    "**/build": true,
+    "**/docs": true
+  }
 }
