--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -94,8 +94,8 @@
             2
         ],
         "linebreak-style": [
-            "error",
-            "windows"
+            "warn",
+            "unix"
         ],
         "quotes": [
             "error",
