--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "docs:copyIcons": "copyfiles --up 1 ./config/*.png ./docs/assets/",
     "lint": "eslint src/**",
     "test:coverage": "jest --collectCoverage --config config/jest.config.js",
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config config/jest.config.js"
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config config/jest.config.js",
+    "tsc-files": "tsc --noEmit --listFiles | xargs stat -f \"%z %N\" | npx webtreemap-cli"
   },
   "devDependencies": {
     "@svgdotjs/svg.js": "^3.1.2",
