--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "clean": "rimraf dist && rimraf etc && rimraf docs",
     "run": "tsc && node -r source-map-support/register",
     "build": "tsup --sourcemap && npm run typings",
+    "build:espruino": "tsup --config espruino.tsup.config.ts",
     "prepublishOnly": "npm run clean && npm run build",
     "typings": "tsc --project config/tsconfig.pkg.json",
     "typings:watch": "tsc --watch --project config/tsconfig.pkg.json",
@@ -68,6 +69,7 @@
   },
   "devDependencies": {
     "@svgdotjs/svg.js": "^3.1.2",
+    "@swc/core": "^1.2.244",
     "@types/d3-color": "^3.1.0",
     "@types/d3-interpolate": "^3.0.1",
     "@types/jest": "^28.1.4",
