--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
     "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
-        "plugin:functional/recommended"
+        "plugin:functional/recommended",
+        "plugin:functional/stylistic"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -32,6 +33,7 @@
             "error",
             {
                 "allowLocalMutation": true,
+                "allowMutableReturnType": true,
                 "ignorePattern": "^_",
                 "ignoreClass": true
             }
